# datavault-desktop

./: .env.example  .gitignore  README.md  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.electron.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
build-resources/: README.md  entitlements.mac.plist
docs/: CONNECTOR_SETUP.md
electron/: main.ts  preload.ts
electron/ipc/: handlers.ts  standardOAuth.ts  trelloAuth.ts
electron/utils/: security.ts
scripts/: generate-icons.mjs
src/: App.tsx  index.css  vite-env.d.ts
src/components/: AppTopNav.tsx  AuthGuard.tsx  ConnectorLimitDialog.tsx  ErrorBoundary.tsx
src/electron/: types.ts
src/hooks/: useAirtableData.ts  useAsanaData.ts  useCancelSyncJob.ts  useClearPendingSyncJobs.ts  useConnectors.ts  useDisconnectConnector.ts  useGoogleSheetsData.ts  useLocalVaultPage.ts  useNotionComments.ts  useNotionDatabases.ts  useNotionPage.ts  useNotionPages.ts  useNotionUsers.ts  useStartSync.ts  useSubscription.ts  useSyncJobs.ts  useTodoistData.ts  (+3 more)
supabase/: config.toml
sync-engine/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sync-engine/sync_engine/: __init__.py  __main__.py  cli.py  config.py
sync-engine/sync_engine/alerts/: __init__.py  email.py
sync-engine/sync_engine/db/: __init__.py  connection.py  job_progress.py  upsert.py
sync-engine/sync_engine/notion/: __init__.py  client.py  schema.py  sync.py
sync-engine/sync_engine/vault/: __init__.py  writer.py
sync-engine/tests/: test_schema.py
(+84 files in other folders)
